# auto-anki

./: .gitignore  LICENSE  README.md  app.py  connector.py  pyproject.toml
